# colosseum

./: .gitignore  Cargo.toml  LICENSE
colosseum-client/: Cargo.toml  build.rs  client.json
colosseum-client/content/: colosseum.glb
colosseum-client/src/: camera.rs  config.rs  error.rs  game_state.rs  main.rs  renderer.rs  socket.rs
colosseum-client/src/game_state/: combat_state.rs  menu_state.rs  state_transition.rs
colosseum-client/src/game_state/combat_state/: action_state.rs  confirmation_state.rs  skill_state.rs  targeting_state.rs  waiting_state.rs
colosseum-client/src/game_state/menu_state/: connecting_state.rs  navigation_state.rs  splash_state.rs
colosseum-client/src/shaders/: pbr.wgsl
colosseum-core/: Cargo.toml  build.rs
colosseum-core/content/bodywear/: breakers_longsleeve.json
colosseum-core/content/consumable/: cracked_bellroot_seed.json  grenade.json
colosseum-core/content/footwear/: breakers_sneakers.json
colosseum-core/content/handwear/: breakers_wraps.json
colosseum-core/content/headwear/: lace_headpiece.json
colosseum-core/content/legwear/: breakers_harem_pants.json
colosseum-core/content/skill/: scorch.json  sweep.json
colosseum-core/content/weapon/: pipe_iron.json
colosseum-core/src/: aspect.rs  attribute.rs  combat_event.rs  combat_state.rs  combatant.rs  consumable.rs  dot.rs  effect.rs  gender.rs  item.rs  lib.rs  lifetime.rs  message.rs  modifier.rs  party.rs  skill.rs  target.rs  weapon.rs
colosseum-server/: Cargo.toml  build.rs  config.json
colosseum-server/src/: config.rs  main.rs
