[package]
name = "colosseum-client"
version = "0.1.0"
authors = ["Chay Nabors"]
edition = "2018"
description = "Colosseum client"
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
env_logger = "0.9.0"
log = "0.4.14"

[dependencies]
anyhow = "1.0.43"
bincode = "1.3.3"
colosseum = { package = "colosseum-core", path = "../colosseum-core" }
env_logger = "0.9.0"
gear = { path = "../gear" }
log = "0.4.14"
replace_with = "0.1.7"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.10.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
