[package]
name = "colosseum-client"
version = "0.1.0"
authors = ["Chay Nabors"]
edition = "2021"
description = "Colosseum client"
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
env_logger = "0.9.0"
log = "0.4.14"

[dependencies]
bincode = "1.3.3"
bytemuck = { version = "1.7.3", features = ["derive"] }
colosseum-core = { path = "../colosseum-core" }
env_logger = "0.9.0"
gltf = "0.16.0"
image = "0.23.14"
log = "0.4.14"
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["full"] }
wgpu = "0.12.0"
winit = "0.26.0"
