[package]
name = "colosseum-core"
version = "0.1.0"
authors = ["Chay Nabors"]
edition = "2018"
description = "Code shared by all Colosseum dependencies"
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
codegen = "0.1.3"
heck = "0.3.3"

[dependencies]
bincode = "1.3.3"
bytes = "1.0.1"
include_dir = "0.6.1"
lazy_static = "1.4.0"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.66"
strum = { version = "0.21.0", features = ["derive"] }
tokio = { version = "1.10.0", features = ["io-util", "net"] }
