[package]
name = "colosseum-core"
version = "0.1.0"
authors = ["Chay Nabors"]
edition = "2021"
description = "Code shared by all Colosseum dependencies"
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
codegen = "0.1.3"
heck = "0.4.0"

[dependencies]
bincode = "1.3.3"
bytes = "1.1.0"
include_dir = "0.7.2"
lazy_static = "1.4.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
strum = { version = "0.23.0", features = ["derive"] }
tokio = { version = "1.15.0", features = ["io-util", "net"] }
