[package]
name = "colosseum-server"
version = "0.1.0"
authors = ["Chay Nabors"]
edition = "2021"
description = "Dedicated server for Colosseum"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
anyhow = "1.0.52"
bincode = "1.3.3"
colosseum-core = { path = "../colosseum-core" }
crossbeam = "0.8.1"
env_logger = "0.9.0"
laminar = "0.5.0"
log = "0.4.14"
redis = "0.21.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
